# imgora

./: .bumpversion.cfg  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  cliff.toml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docu.yml  main.yml  new-version.yml
changelog/: index.html
docs/: cli.md  docu.md  packages.md
examples/: README.md  compare_backends.py  compare_backends_advanced.py  compare_imagor_thumbor.py  package_usage.py
examples/comparison_results/: comparison.html
examples/templates/: comparison.html  comparison_new.html
reference/SUMMARY/: index.html
reference/imgora/: index.html
reference/imgora/decorator/: index.html
search/: search_index.json
src/imgora/: __init__.py  _core.py  _imagor.py  _thumbor.py  _wsrv_nl.py
src/imgora/cli/: __init__.py  base.py  imagor.py  thumbor.py
src/pymagor/: __init__.py  _colors.py  _converter.py  _core.py  _imagor.py  _thumbor.py  _wsrv_nl.py  decorator.py
src/pymagor/cli/: __init__.py  base.py  imagor.py  thumbor.py
tasks/: project.py
tests/: conftest.py  test_imagor_integration.py  test_thumbor_integration.py
